<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:background="@drawable/ic_cancel" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/_00_00"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/chooseTimeBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_time"
        android:textAllCaps="false" />

    <CheckBox
        android:id="@+id/repeatCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/repeat_everyday" />

    <EditText
        android:id="@+id/nameET"
        android:hint="@string/name"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        android:textAllCaps="false" />

</LinearLayout>